# jaguari

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
accounts/: tests.py  urls.py  views.py
cie/: settings.py  urls.py  wsgi.py
cie/components/: application.py  cas.py  i18n.py  static.py
cie/settings/: base.py  development.py
fixtures/: checkout.xml  login-longname.xml  login.xml
jaguari/: settings.py  urls.py
orders/: admin.py  apps.py  factories.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
orders/locale/pt-br/LC_MESSAGES/: django.po
orders/locale/pt_BR/LC_MESSAGES/: django.po
orders/static/orders/: cie.png.REMOVED.git-id
orders/templates/orders/: index.html  new.html  order_detail.html  order_form.html  order_list.html
orders/templates/orders/partials/: picture_form.html  review_form.html
orders/templates/requests/: new.html
orders/templatetags/: orders_extras.py
requests/: models.py  tests.py  urls.py  utils.py  views.py
requests/templates/requests/: new.html
sessions/: views.py
staticfiles/: cie.js  cie.scss
templates/: footer.html  head.html  index.html  navbar.html  template.html
templates/errors/: missing_fields.html  no_valid_link.html
tests/: checkout.xml  cursoGraduacaoAluno-anotherCampus.json  cursoGraduacaoAluno.json  vinculosPessoaById.json
