[tool.poetry]
name = "jaguari"
version = "0.1.0"
description = ""
authors = ["Ranieri Althoff <ranisalt@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
django = "^2.0"
django-cas-ng = "^3.5"
django-pagseguro2 = "^2.0"
django-localflavor-br = "^1.0"
django-compressor = "^2.2"
mysqlclient = "^1.3"
iso8601 = "^0.1.12"
requests = "^2.19"
responses = "^0.9.0"
qrcode = "^6.0"
pytz = "^2018.4"
pillow = "^5.1"
django-libsass = "^0.7.0"
django-split-settings = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
factory_boy = "^2.11"
coveralls = "^1.3"
pytest-cov = "^2.5"
pytest-django = "^3.3"
